make-a-wish-salesforce/src/objects/Wish_Child_Form__c.object
<CustomObject>
    <fields>
        <fullName>When_I_m_inside_I_like_to__c</fullName>
        <description>Other favorites</description>
        <label>When I’m inside, I like to…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_outside_I_like_to__c</fullName>
        <description>Other Favorites</description>
        <label>When I’m outside, I like to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_with_my_family_I_like_to__c</fullName>
        <description>Other favorites</description>
        <label>When I’m with my family, I like to…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_m_with_my_friends_I_like_to__c</fullName>
        <description>Other favorites</description>
        <label>When I’m with my friends, I like to…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_I_think_about_my_wish_I_imagine__c</fullName>
        <label>When I think about my wish, I imagine….</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_thinking_some_of_my_wish_ideas_were__c</fullName>
        <label>When thinking,some of my wish ideas were</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_car_seat_s_Details__c</fullName>
        <description>Wish Family form Travel question3</description>
        <label>Will a rental car seat(s) Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_car_seat_s_be_needed_Note__c</fullName>
        <label>Will a rental car seat(s) be needed?Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_car_seat_s_be_needed__c</fullName>
        <label>Will a rental car seat(s) be needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_a_rental_stroller_Details__c</fullName>
        <description>Wish Family form Travel question5</description>
        <label>Will a rental stroller Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_stroller_be_needed_Note__c</fullName>
        <label>Will a rental stroller be needed? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_a_rental_stroller_be_needed__c</fullName>
        <label>Will a rental stroller be needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_an_interpreter_be_needed_Details__c</fullName>
        <description>Wish Family form Travel question2</description>
        <label>Will an interpreter be needed Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_an_interpreter_be_needed_Note__c</fullName>
        <label>Will an interpreter be needed? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_an_interpreter_be_needed__c</fullName>
        <label>Will an interpreter be needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_handicap_accessible_Details__c</fullName>
        <description>Wish Family form Travel question6</description>
        <label>Will handicap accessible Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_your_family_bring_wheelchair_Note__c</fullName>
        <label>Will_your_family_bring_wheelchair_Note__</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_your_family_bring_wheelchair__c</fullName>
        <label>Will your family bring wheelchair?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WishType__c</fullName>
        <label>Wish Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Wish_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish_Determination_Case_Id__c</fullName>
        <description>It holds the Wish Determination Case Id value.</description>
        <label>Wish Determination Case Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Family_Contact__c</fullName>
        <label>Wish Family Contact</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wish_Notes__c</fullName>
        <label>Wish Notes…</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wish_child_receive_nursing_care_Note__c</fullName>
        <description>Notes on nursing care that wish child receives</description>
        <label>Wish child receive nursing care? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wish_child_receive_nursing_care__c</fullName>
        <description>Details on wish child receiving nurse care</description>
        <label>Wish child receive nursing care?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>It will hold wish child zip code detail.</description>
        <label>Zip Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobilePhone__c</fullName>
        <description>Wish child&apos;s mobile phone</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>oxygen_Details__c</fullName>
        <label>oxygen Details</label>
        <type>TextArea</type>
    </fields>
    <label>Wish Paperwork Packet</label>
    <nameField>
        <displayFormat>WC-{00}</displayFormat>
        <label>Wish Child Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Paperwork Packets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>